# lift-proxy

./: .dockerignore  .env.example  .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Secrets.example.toml  Shuttle.toml  devenv.nix  devenv.yaml  flake.nix  fly.toml  shell.nix  standalone.Dockerfile
migrations/: 0001_init.sql  0002_comments.sql  0002_proxies.sql
src/: app_state.rs  constants.rs  env.rs  main.rs  syncing.rs
src/cf/: mod.rs
src/db/: auth.rs  proxy.rs
src/middlewares/: handle_auth.rs  mod.rs
src/providers/: auth.rs  chutes.rs  chutes_api.rs  deepinfra.rs  dzmm.rs  google.rs  haomo.rs  mod.rs  nvidia.rs  openrouter.rs
src/proxy/: mod.rs  webshare.rs
src/routes/: auth_management.rs  auths.rs  health.rs  mod.rs  proxied_chat.rs  proxied_models.rs  show_chat.rs
src/utils/: create_client.rs  data_types.rs  get_response_stream.rs  mod.rs  stream_body.rs
