[package]
name = "lift-proxy"
version = "0.1.0"
authors = ["paradox8599 <paradox8599@outlook.com"]
edition = "2021"
rust-version = "1.85.0"
description = "Roates proxies and auth tokens for LLM APIs"
repository = "https://github.com/paradox8599/lift-proxy"
license = "None"
keywords = ["proxy", "llm", "ai", "openai"]

[dependencies]
tokio = { version = "1.28.2", features = ["full", "rt"] }
axum = "0.8.1"
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing = "0.1.41"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json", "socks"] }
chrono = "0.4.40"
url = "2.5.4"
eyre = "0.6.12"
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio"] }
tracing-subscriber = "0.3.19"

